--- a/vue_projectr/index.html
+++ b/vue_projectr/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <title>vueproject</title>
-
+     <link rel="stylesheet" type="text/css" href="static/font/hot/iconfont.css">
+    <link rel="stylesheet" type="text/css" href="static/font/fontcat/iconfont.css">
+<link rel="stylesheet" type="text/css" href="static/font/iconfont.css">
     <link rel="stylesheet" type="text/css" href="./static/comm.css">
   </head>
   <body>
